--- a/index.html
+++ b/index.html
@@ -73,10 +73,15 @@
             </tbody>
            </table>
         </div>
-        <br>
+        
         <br>
         <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique eos dolor reiciendis, dolores veritatis architecto ullam sed inventore distinctio, illo corrupti quam dolorem perferendis tenetur cupiditate consequatur cumque id maxime. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia earum libero alias dicta et ducimus totam, delectus hic aut illo dolore exercitationem quo sequi harum dolorem autem repudiandae soluta iure.</div>
     </main> <!-- Fine Main--> 
+    <Folder>
+        <h3>Potrebbero interessarti</h3>
+        <img src="graph.jpg" alt="Grafico">
+        <img src="monitor.jpg" alt="Monitor">
+    </Folder>
     
 
 </body>
